src/baler/btypes.h

/**
 * \brief Baler string structure for various types.
 */
typedef struct __attribute__((packed)) bstr {
	uint32_t blen; /**< Byte length of the string */
	union {
		char cstr[0]; /**< For regular char. */
		uint32_t u32str[0]; /**< Array of 32b values */
		uint64_t u64str[0]; /**< Array of 64b values */
	};
} *bstr_t;
/**
 * A mask of the different types this text has occupied. For example,
 * if "hero" has been seen in the hostname position of a syslog
 * message, one of it's types is BTKN_TYPE_HOSTNAME, however, since it
 * is also an English word, it also has the type BTKN_TYPE_WORD
 */
typedef uint64_t btkn_type_mask_t;
typedef uint64_t btkn_id_t;
typedef struct btkn {
	btkn_id_t tkn_id;
	btkn_type_mask_t tkn_type_mask;
	uint64_t tkn_count;
	struct bstr *tkn_str;
	void *call_0;
	void *call_1;
	LIST_ENTRY(btkn) entry;
} *btkn_t;
static int btkn_has_type(btkn_t tkn, btkn_type_t typ) {
	return (tkn->tkn_type_mask & BTKN_TYPE_MASK(typ));
}
static btkn_type_t btkn_first_type(btkn_t tkn) {
	return ffsl(tkn->tkn_type_mask);
}
static btkn_t
btkn_alloc(btkn_id_t tkn_id, btkn_type_mask_t mask, const char *str, size_t len) {
	btkn_t t = malloc(sizeof *t + sizeof(struct bstr) + (len+1));
	if (t) {
		extern pthread_mutex_t tkn_lock;
		extern struct btkn_list_head tkn_list;
		t->tkn_id = tkn_id;
		t->tkn_type_mask = mask;
		t->tkn_count = 0;
		t->tkn_str = (struct bstr *)(t+1);
		t->tkn_str->blen = len+1;
		memcpy(t->tkn_str->cstr, str, len);
		t->tkn_str->cstr[len] = '\0';
		#ifndef __OPTIMIZE__
		t->call_0 = __builtin_return_address(1);
		t->call_1 = __builtin_return_address(2);
		#endif
		pthread_mutex_lock(&tkn_lock);
		LIST_INSERT_HEAD(&tkn_list, t, entry);
		pthread_mutex_unlock(&tkn_lock);
	}
	return t;
}
static btkn_t btkn_dup(btkn_t src)
{
	btkn_t dst = malloc(sizeof *dst);
	if (dst) {
		*dst = *src;
		dst->tkn_str = bstr_alloc(src->tkn_str->blen+1);
		memcpy(dst->tkn_str->cstr, src->tkn_str->cstr, src->tkn_str->blen);
		dst->tkn_str->cstr[src->tkn_str->blen] = '\0';
	}
	return dst;
}
static void btkn_free(btkn_t t)
{
	extern pthread_mutex_t tkn_lock;
	extern struct btkn_list_head tkn_list;
	pthread_mutex_lock(&tkn_lock);
	LIST_REMOVE(t, entry);
	pthread_mutex_unlock(&tkn_lock);
	free(t);
}
/**
 * Baler Message.
 * A baler message is defined by its 1-pattern id and the pattern arguments.
 */
typedef uint64_t bptn_id_t;
typedef uint64_t bcomp_id_t;
typedef struct bmsg {
	bptn_id_t ptn_id; /** Pattern ID. */
	bcomp_id_t comp_id;	/* Component id */
	struct timeval timestamp;
	uint32_t  argc; /** Argument count. */
	btkn_id_t argv[0]; /** Arguments. */
} *bmsg_t;
typedef struct bptn {
	bptn_id_t ptn_id;
	struct timeval first_seen;
	struct timeval last_seen;
	uint64_t count;
	uint64_t tkn_count;
	bstr_t str;
} *bptn_t;
typedef struct btkn_hist_s {
	btkn_id_t tkn_id;
	uint32_t bin_width;
	uint32_t time;
	uint64_t tkn_count;
} *btkn_hist_t;
typedef struct bptn_hist_s {
	bptn_id_t ptn_id;
	uint32_t bin_width;
	uint32_t time;
	uint64_t msg_count;
} *bptn_hist_t;
typedef struct bcomp_hist_s {
	bcomp_id_t comp_id;
	bptn_id_t ptn_id;
	uint32_t bin_width;
	uint32_t time;
	uint64_t msg_count;
} *bcomp_hist_t;
static inline bptn_t bptn_alloc(size_t tkn_count) {
	bptn_t p = malloc(sizeof *p);
	if (p) {
		p->str = bstr_alloc(tkn_count * sizeof(btkn_id_t));
		if (!p->str) {
			free(p);
			p = NULL;
		}
	}
	return p;
}
static inline void bptn_free(bptn_t ptn) {
	free(ptn->str);
	free(ptn);
}
/**
 * Convenient msg dup macro for ::bmsg, similar to strdup()
 * \param bmsg The message to dup.
 */
static bmsg_t bmsg_dup(bmsg_t src) {
	size_t argv_sz = src->argc * sizeof(*src->argv);
	bmsg_t dst = malloc(sizeof(*dst) + argv_sz);
	if (dst) {
		*dst = *src;
		memcpy(dst->argv, src->argv, argv_sz);
	}
	return dst;
}
/**
 * Wrapper for regular free() function (just to match ::bmsg_alloc).
 * \param msg The pointer to ::bmsg to be freed.
 */
#define bmsg_free(msg) free(msg)